syntax="proto3";

package proto;
option go_package = "github.com/paramonies/ya-gophkeeper/pkg/gen/gophkeeper/v1;gophkeeper";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GophkeeperService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message RegisterUserRequest{
  string serviceLogin = 1;
  string servicePass = 2;
}

message RegisterUserResponse{
  string userID = 1;
  string jwt = 2;
}