syntax="proto3";

package proto;
option go_package = "github.com/paramonies/ya-gophkeeper/pkg/gen/gophkeeper/v1;gophkeeper";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service PasswordService {
  rpc CreatePassword(CreatePasswordRequest) returns (CreatePasswordResponse);
}

message CreatePasswordRequest{
  string login = 1;
  string password = 2;
  string meta = 3;
  uint32 version = 4;
}

message CreatePasswordResponse{
  string status = 1;
}